# robotruck_school_1128

./: .gitignore  README.md  architecture.html  readme.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: ENV_SETUP_GUIDE.md  PROJECT_STRUCTURE.md  VEHICLE_DYNAMICS_MODEL.md  参数辨识与模型优化方案.md
win_ros_sim/: .gitignore  truck_model.cpar  truckt_ROS_mpc_8dof_2020a.slx
win_ros_sim/ws/src/: .gitignore
win_ros_sim/ws/src/common/robominer_msgs/: CMakeLists.txt  package.xml  readme.md
win_ros_sim/ws/src/common/robominer_msgs/msg/: AutoControllerInfo.msg  AutoDriveStatus.msg  BoonrayArea.msg  BoonrayBorder.msg  BoonrayLane.msg  BoonrayMap.msg  BoonrayObstArea.msg  BoonrayPoint.msg  BoonrayRutArea.msg  BoundingBox.msg  Brim.msg  BrimPosition.msg  ChassisEnableCtrl.msg  ChassisError.msg  CloudCluster.msg  CloudObstacle.msg  CloudObstacles.msg  ControlCmd.msg  ControlCmdAux.msg  ControlResourceItem.msg  ControlResourceList.msg  CurrentVoxel.msg  DetectedObject.msg  DetectedObjectArray.msg  DeviceBodyCoordinates.msg  DeviceType.msg  DiggerStatus.msg  DriveMode.msg  DriveStatus.msg  EdgePoint.msg  EdgeRectangle.msg  Epb.msg  EpowerState.msg  EsdfCell.msg  EsdfMap.msg  EsdfOccupy.msg  FaultCode.msg  FaultCodes.msg  FaultLevel.msg  FaultModule.msg  (+69 more)
win_ros_sim/ws/src/common/robominer_msgs/srv/: StartPlan.srv  StopPlan.srv
win_ros_sim/ws/src/common/simulation/mock_truck/: CMakeLists.txt  package.xml
win_ros_sim/ws/src/common/simulation/mock_truck/launch/: mock_truck_simple.launch
win_ros_sim/ws/src/common/simulation/mock_truck/rviz/: simu.rviz
win_ros_sim/ws/src/common/simulation/mock_truck/src/: MPC_controller.py  mock_truck.py  simple_controller.py
win_ros_sim/ws/src/estimation/: CMakeLists.txt  package.xml
win_ros_sim/ws/src/estimation/launch/: estimation_launch.launch
win_ros_sim/ws/src/estimation/msg/: AdhesionEst.msg  MassSlopeEst.msg  VehParamEst.msg
win_ros_sim/ws/src/estimation/src/: adhesion_est.py  mass_slope_est.py  veh_param_est.py
win_sim/: truck_mpc.cpar  truck_mpc_8dof_2020a.slx
